src/components/Collapse/Collapse.scss
.collapse-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;

  .collapse {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0px;
    padding: 0px;
    border-radius: 5px;
    background-color: #ff6060;
    width: 100%;
    height: 54px;
    color: white;
    font-weight: bold;
    font-size: 24px;
    position: relative;
    z-index: 2;

    .collapse__name {
      padding-left: 10px;
    }

    .arrow-collapse {
      padding-right: 10px;
      transition: transform 0.5s ease-in-out;
      transform: rotate(-180deg);

      &:hover {
        cursor: pointer;
      }
    }
    &.open img{
      transform: rotate(180deg);
    }
  }

  .collapse__text {
    box-sizing: border-box;
    transform: translateY(-0px);
    animation: slideOut 0.5s ease-in-out;
    overflow: hidden;
    margin-top: 0px;
    padding: 20px 20px;
    width: 100%; 
    white-space: pre-wrap;
    color: black;
    background-color: #f6f6f6 ;
    font-size: 20px;
    border-radius: 0px 0px 10px 10px;
    position: relative;
    z-index: 1;
  }

  @keyframes slideOut {
    from {
      transform: translateY(-30px);
    }
  
    to {
      transform: translateY(0);
    }
  }

  &.open .collapse__text {
    transform: translate(0);
  }
}

